--- a/Index.html
+++ b/Index.html
@@ -5,14 +5,15 @@
             <link rel="stylesheet" type="text/css" href="ColorPicker.css">
         </head>
         <body>
-            <div id = "container">
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-            </div>
+            <h1>The great RGB Color Game</h1>
+                <div id = "container">
+                    <div class="square"></div>
+                    <div class="square"></div>
+                    <div class="square"></div>
+                    <div class="square"></div>
+                    <div class="square"></div>
+                    <div class="square"></div>
+                </div>
         </body>
 
 
