--- a/ColorPicker.html
+++ b/ColorPicker.html
@@ -3,9 +3,10 @@
         <head>
             <title>Color Picker Game</title>
             <link rel="stylesheet" type="text/css" href="ColorPicker.css">
+            <script type="text/javascript" src="ColorPicker.js"></script>
         </head>
         <body>
-            <h1>The great RGB Color Game</h1>
+            <h1>The Great RGB Color Game</h1>
                 <div id = "container">
                     <div class="square"></div>
                     <div class="square"></div>
@@ -14,6 +15,9 @@
                     <div class="square"></div>
                     <div class="square"></div>
                 </div>
+
+
+
         </body>
 
 
