JS file changes

--- a/ColorPicker.html
+++ b/ColorPicker.html
@@ -3,10 +3,10 @@
         <head>
             <title>Color Picker Game</title>
             <link rel="stylesheet" type="text/css" href="ColorPicker.css">
-            <script type="text/javascript" src="ColorPicker.js"></script>
+
         </head>
         <body>
-            <h1>The Great RGB Color Game</h1>
+            <h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
                 <div id = "container">
                     <div class="square"></div>
                     <div class="square"></div>
@@ -19,7 +19,7 @@
 
 
         </body>
-
+        <script type="text/javascript" src="ColorPicker.js"></script>
 
 
 
